--- a/src/view/components/card-container/style.scss
+++ b/src/view/components/card-container/style.scss
@@ -1,5 +1,42 @@
 .card-container {
-  background-color: #000000;
+  background-color: $main-board;
+  border: 4px solid $outer-border;
   height: 640px;
+  padding: 10px;
   width: 480px;
+
+  .top-bar {
+    height: 15%;
+    margin-bottom: 2%;
+    width: 100%;
+
+    .logo-panel {
+      align-items: center;
+      background-color: $logo-panel;
+      border-radius: 10px;
+      color: #ffffff;
+      display: flex;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 32px;
+      font-weight: bold;
+      height: 100%;
+      justify-content: center;
+      width: 30%;
+    }
+  }
+
+  .cards-area {
+    background-color: #ffffff;
+    height: 78%;
+    margin-bottom: 2%;
+    width: 100%;
+  }
+
+  .footer {
+    align-items: center;
+    display: flex;
+    height: 3%;
+    justify-content: center;
+    width: 100%;
+  }
 }
