pair check functionality

--- a/src/view/assets/styles/colors.scss
+++ b/src/view/assets/styles/colors.scss
@@ -2,3 +2,4 @@ $number-panel: #bbada0 !global;
 $logo-panel: #5979ac !global;
 $main-board: #faf8ef !global;
 $outer-border: #bdbdbd !global;
+$card-back: #cccccc !global;
