--- a/src/view/style.scss
+++ b/src/view/style.scss
@@ -1,5 +1,6 @@
 /* common styles */
 @import './assets/styles/colors.scss';
+@import './assets/styles/background-images.scss';
 
 /* components styles */
 @import './components/card-container/style.scss';
